add(train):added get movie lists api to make a standard
